# ecdaa

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE  NOTICE  README.md  ecdaa-config.cmake.in  ecdaa-tpm.pc.in  ecdaa.pc.in
.travis/: build-against-installed.sh  install-amcl.sh  install-ibm-tpm2.sh  install-libsodium.sh  install-tpm2-tss.sh  install-valgrind.sh  install-xaptum-tpm.sh  path_expansion.sh  prepare-tpm2.sh  run-cppcheck.sh  run-ibm-tpm2.sh  run-scanbuild.sh  run-sgcheck.sh  run-tpm-simulator.sh  show-memcheck-results.sh  upload-gcov-results.sh
benchmarks/: CMakeLists.txt  benchmarks_ZZZ.c  ecdaa-benchmark-utils.h
cmake/: FindAMCL.cmake  FindTSS2.cmake  FindXaptumTPM.cmake  Findsodium.cmake  LibFindMacros.cmake  template_expansion.py
common/: CMakeLists.txt
common/amcl-extensions/: big_XXX.c  big_XXX.h  ecp2_ZZZ.h  ecp_ZZZ.c  ecp_ZZZ.h  pairing_ZZZ.c  pairing_ZZZ.h
common/internal-utilities/: rand_pool.c  rand_pool.h
contrib/: FindECDAA.cmake
debian/: README.md  changelog  control  copyright  ecdaa.install  gbp.conf  libecdaa-dev.install  libecdaa-tpm-dev.install  libecdaa-tpm1.install  libecdaa0.install  libecdaa1.install  postinst  postrm  rules
doc/: BUILDING.md  IMPLEMENTATION.md  TESTS.md  USAGE.md
examples/: CMakeLists.txt  ecdaa_extract_group_public_key.c  ecdaa_issuer_create_group.c  ecdaa_issuer_respond_to_join_request.c  ecdaa_member_process_join_response.c  ecdaa_member_request_join.c  ecdaa_member_sign.c  ecdaa_verify.c  examples_rand.c  examples_rand.h  extract_group_public_key.c  file_utils.h  issuer_create_group.c  issuer_respond_to_join_request.c  member_process_join_response.c  member_request_join.c  member_sign.c  verify.c
include/: ecdaa.h  xaptum-ecdaa.h
include/ecdaa/: credential.h  credential_BN254.h  group_public_key.h  group_public_key_BN254.h  group_public_key_ZZZ.h  issuer_keypair.h  issuer_keypair_BN254.h  member_keypair.h  member_keypair_BN254.h  member_keypair_TPM.h  revocation_list_BN254.h  revocation_list_ZZZ.h  revocations_ZZZ.h  sign.h  signature.h  signature_BN254.h  signature_TPM.h  signature_ZZZ.h  sk_revocation_list.h  tpm_context.h  verify.h
include/xaptum-ecdaa/: context.h  credential.h  group_public_key.h  issuer.h  issuer_keypair.h  issuer_nonce.h  join_member.h  member.h  sign.h  verify.h
libecdaa/: CMakeLists.txt  credential_ZZZ.c  group_public_key_ZZZ.c  issuer_keypair_ZZZ.c  member_keypair_ZZZ.c  prng.c  signature_ZZZ.c
libecdaa-tpm/: CMakeLists.txt  member_keypair_TPM_ZZZ.c  signature_TPM_ZZZ.c  tpm_context.c
libecdaa-tpm/include/: ecdaa-tpm.h
libecdaa-tpm/include/ecdaa-tpm/: member_keypair_TPM_ZZZ.h  signature_TPM_ZZZ.h  tpm_context.h
libecdaa-tpm/schnorr-tpm/: schnorr_TPM_ZZZ.c  schnorr_TPM_ZZZ.h
libecdaa-tpm/tpm/: commit_ZZZ.c  commit_ZZZ.h  sign.c  sign.h
libecdaa/include/: ecdaa.h
libecdaa/include/ecdaa/: credential_ZZZ.h  group_public_key_ZZZ.h  issuer_keypair_ZZZ.h  member_keypair_ZZZ.h  prng.h  rand.h  revocations_ZZZ.h  signature_ZZZ.h
libecdaa/include/ecdaa/util/: errors.h  file_io.h  file_utils.h  rand_util.h  util_errors.h
libecdaa/schnorr/: schnorr_ZZZ.c  schnorr_ZZZ.h
libecdaa/util/: file_io.c  file_utils.c  rand_util.c
src/: context.c  credential.c  credential_BN254.c  credential_ZZZ.c  explicit_bzero.c  group_public_key.c  group_public_key_BN254.c  group_public_key_ZZZ.c  issuer.c  issuer_keypair.c  issuer_keypair_BN254.c  issuer_keypair_ZZZ.c  issuer_nonce.c  join_member.c  member.c  member_keypair.c  member_keypair_BN254.c  member_keypair_TPM.c  member_keypair_ZZZ.c  mpi_utils.c  mpi_utils.h  pairing_curve_utils.c  pairing_curve_utils.h  prng.c  schnorr.c  schnorr.h  sign.c  signature.c  signature_BN254.c  signature_TPM.c  signature_ZZZ.c  tpm_context.c  verify.c
src/amcl-extensions/: big_256_56.c  big_256_56.h  big_XXX.c  big_XXX.h  ecp2_BN254.c  ecp2_BN254.h  ecp2_ZZZ.c  ecp_BN254.c  ecp_BN254.h  ecp_ZZZ.c  ecp_ZZZ.h  pairing_BN254.c  pairing_BN254.h  pairing_ZZZ.c
src/internal/: explicit_bzero.c  (+9 more)
test/: CMakeLists.txt  benchmarks.c  benchmarks_ZZZ.c  big_256_56-tests.c  big_XXX-tests.c  context-tests.c  credential-tests.c  credential_ZZZ-tests.c  ecdaa-test-utils.c  ecdaa-test-utils.h  ecp2_BN254-tests.c  ecp2_ZZZ-tests.c  ecp_BN254-tests.c  ecp_ZZZ-tests.c  group_public_key-tests.c  group_public_key_ZZZ-tests.c  integration-tests.c  integration-tests.py  issuer_keypair-tests.c  issuer_keypair_ZZZ-tests.c  join_member-tests.c  member_keypair-tests.c  member_keypair_ZZZ-tests.c  mpi_utils-tests.c  pairing_curve_utils-tests.c  prng-tests.c  schnorr-tests.c  schnorr_TPM-tests.c  schnorr_ZZZ-fuzz.c  schnorr_ZZZ-tests.c  sign-and-verify-tests.c  signature-tests.c  signature_TPM-tests.c  signature_ZZZ-tests.c  tool-test.sh  tpm-test-utils.h  tpm-test.c  valgrind-tool-test.sh  xaptum-test-utils.c  xaptum_test.h
test/tpm/: CMakeLists.txt  create_tpm_key-util.c  schnorr_TPM_ZZZ-fuzz.c  schnorr_TPM_ZZZ-tests.c  signature_TPM_ZZZ-tests.c  tpm_ZZZ-test-utils.h  tpm_ZZZ-test.c
tool/: CMakeLists.txt  ecdaa.c  ecdaa_extract_group_public_key.c  ecdaa_extract_group_public_key.h  ecdaa_issuer_create_group.c  ecdaa_issuer_create_group.h  ecdaa_issuer_respond_to_join_request.c  ecdaa_issuer_respond_to_join_request.h  ecdaa_member_process_join_response.c  ecdaa_member_process_join_response.h  ecdaa_member_request_join.c  ecdaa_member_request_join.h  ecdaa_member_sign.c  ecdaa_member_sign.h  ecdaa_verify.c  ecdaa_verify.h  extract_gpk_ZZZ.c  extract_gpk_ZZZ.h  issuer_create_group_ZZZ.c  issuer_create_group_ZZZ.h  issuer_gen_keys_ZZZ.c  issuer_gen_keys_ZZZ.h  issuer_issue_credential_ZZZ.c  issuer_issue_credential_ZZZ.h  issuer_respond_to_join_request_ZZZ.c  issuer_respond_to_join_request_ZZZ.h  member_gen_keys_ZZZ.c  member_gen_keys_ZZZ.h  member_process_credential_ZZZ.c  member_process_credential_ZZZ.h  member_process_join_response_ZZZ.c  member_process_join_response_ZZZ.h  member_request_join_ZZZ.c  member_request_join_ZZZ.h  member_sign_ZZZ.c  member_sign_ZZZ.h  parse_cli.c  parse_cli.h  tool_rand.c  tool_rand.h  (+2 more)
(+4 files in other folders)
